<resources>
    <string name="app_name">FctTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>

    <string name="un">Un</string>
    <string name="deux">DeuX</string>

    <string name="hello">Hello</string>

    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>

    <!--bddgreen-->
    <string name="menu_add_item">Add item</string>
    <string name="menu_delete_items">Delete items</string>
    <string name="button_save">Save</string>
    <string name="dialog_delete_items_title">Delete items</string>
    <string name="dialog_delete_items_confirm">Yes</string>
    <string name="dialog_delete_items_cancel">No</string>
    <string name="dialog_delete_items_content">Do you want to delete all items from list?</string>
    <string name="dialog_delete_item_title">Delete item</string>
    <string name="dialog_delete_item_content">Do you want to delete this item?</string>
    <string name="toast_no_items_to_delete">There are no items to delete</string>
    <string name="toast_validation_error">Validation error</string>
    <string name="tv_label_item_id">Item id: </string>
    <string name="tv_label_profil_nickname">Box name: </string>
    <string name="tv_label_profil_num">Box num: </string>
    <string name="tv_label_profil_mail">Box mail: </string>
    <string name="tv_label_profil_password">Box password: </string>
    <string name="error_must_be_number">Field must be a number</string>
    <string name="error_cannot_be_empty">Field cannot be empty</string>


    <!-- bluetooth-->
    <string name="bt_unlock_instructions">
        Select paired devices that will disable lock screen security
        while connected. Long-press an item to set additional options while
        connected (if checked).
    </string>
    <string name="no_paired_devices"> No paired bluetooth devices</string>
    <string name="pair">Pair</string>
    <string name="bluetooth_disabled">Bluetooth is disabled</string>
    <string name="enable">Enable</string>
    <string name="no_bluetooth_adapter">This device does not support bluetooth</string>
    <string name="disable_keyguard_bt_label">Enable management</string>

</resources>
